# fufufafa-as-a-service

./: .gitignore  .gitmodules  API.md  README.md
backend/: Cargo.toml  generate-seed.js  schema.sql
backend/scripts/: upload-images.sh
backend/src/: db.rs  index.js  lib.rs  models.rs
data-extraction/: generate-json.js  package.json  post-template.html  quotes.json  scrape-posts.js
