[package]
name = "fuaas-backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
